# site-builder

./: .env.sample  .gitignore  README.md  railway.toml  start_be.sh  start_fe.sh
backend/: Dockerfile  main.py  pyproject.toml
backend/modules/: cloudflare_deployer.py  image_generator.py  maps_scraper.py  maps_url_parser.py  rate_limiter.py  react_builder.py  site_generator.py  vercel_deployer.py  website_scraper.py  websocket_manager.py
backend/templates/react/: index.html  package.json  template.json
backend/templates/react-bold/: template.json
backend/templates/react-bold/src/: App.tsx
backend/templates/react-bold/src/components/: About.tsx  CTA.tsx  Contact.tsx  FAQ.tsx  Footer.tsx  Gallery.tsx  Hero.tsx  HowItWorks.tsx  LocalBusinessSchema.tsx  Navbar.tsx  Services.tsx  SocialProof.tsx  Testimonials.tsx  WhyChooseUs.tsx
backend/templates/react-bold/src/icons/: heroicons.tsx
backend/templates/react-elegant/: index.html  package-lock.json  package.json  tailwind.config.js  template.json
backend/templates/react-elegant/src/: App.tsx  index.css
backend/templates/react-elegant/src/components/: About.tsx  CTA.tsx  Contact.tsx  FAQ.tsx  Footer.tsx  Gallery.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Services.tsx  SocialProof.tsx  Testimonials.tsx  WhyChooseUs.tsx
backend/templates/react/src/: App.tsx  data.json
backend/templates/react/src/components/: About.tsx  CTA.tsx  Contact.tsx  FAQ.tsx  Footer.tsx  Gallery.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Services.tsx  SocialProof.tsx  (+2 more)
backend/tests/: conftest.py  test_api.py  test_models.py
(+53 files in other folders)
