[project]
name = "site-builder-backend"
version = "0.1.0"
description = "No-code website builder from Google Maps links"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
